k8s/employee-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-deployment
spec:
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
      - name: employee
        image: sabirsaheel0/school-app-employee:01
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: employee-clusterip
spec:
  selector:
    app: employee
  ports:
  - port: 5003
    targetPort: 5003
