k8s/teacher-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teacher-deployment
spec:
  selector:
    matchLabels:
      app: teacher
  template:
    metadata:
      labels:
        app: teacher
    spec:
      containers:
      - name: teacher
        image: sabirsaheel0/school-app-teacher:0.1
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: teacher-clusterip
spec:
  selector:
    app: teacher
  ports:
  - port: 5002
    targetPort: 5002
