k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: ^/?$
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-clusterip
                port:
                  number: 3000
          - path: /employee-svc/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: employee-clusterip
                port:
                  number: 5003
          - path: /teacher-svc/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: teacher-clusterip
                port:
                  number: 5002
          - path: /student-svc/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: student-clusterip
                port:
                  number: 5001
